# iotkit-embedded

./: .config  make.settings  makefile  sdk-c.mk
build-rules/scripts/: gen_one_makefile.sh
examples/: app_entry.c  iot.mk
examples/linkkit/: linkkit_example_solo.c
src/board/: config.hisiv300.linux  config.win7.mingw32
src/infra/utils/: iotx_utils.h
src/protocol/coap/local/: CoAPObserve.c  CoAPServer.c
src/ref-impl/hal/os/ubuntu/: HAL_AWSS_linux.c  HAL_Crypt_Linux.c  HAL_OS_linux.c  awss_80211.c  awss_80211.h  awss_cpack.c  awss_cpack.h  awss_extract.h  awss_netdissect.h  awss_scan.c  awss_scan.h  event.c  genl.c  iw.c  iw.h  netdissect.h  nl80211.h  scan.c
src/sdk-impl/: impl_linkkit.c
src/services/awss/: CMakeLists.txt  Config.in  awss.c  awss.mk  awss_aplist.c  awss_crypt.c  awss_dev_ap.c  awss_enrollee.c  awss_main.c  awss_main.h  awss_smartconfig.c  awss_statis.c  awss_statis.h  iot.mk  zconfig_ieee80211.c  zconfig_protocol.c  zconfig_vendor_common.c
src/services/common/: awss_event.c  awss_packet.c  awss_packet.h  iot.mk
src/services/dev_bind/: awss_bind.c  awss_bind_statis.h  awss_cmp_coap.c  awss_event.c  dev_bind.mk  iot.mk
src/services/dev_bind/os/: platform.h
src/services/dev_reset/: awss_reset.c
src/services/linkkit/dev_reset/: awss_reset.c  dev_reset.mk
src/services/ota/: CMakeLists.txt
src/tools/: default_settings.mk  parse_make_settings.mk  walk_through_examples.sh
