INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/include/exports)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/include/imports)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/infra/)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/infra/log)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/infra/system)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/infra/system/facility)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/infra/utils)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/infra/utils/digest)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/infra/utils/misc)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/services/awss/)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/services/common/)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/services/common/os)
INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/src/services/common/os/product)

FILE (GLOB src_services_awss_SRCS
    ${PROJECT_SOURCE_DIR}/src/services/awss/*.c
)

ADD_LIBRARY (iot_awss OBJECT
    ${src_services_awss_SRCS}
    ${EXTRA_C_SOURCES}
)

